fixed search bar layout and some other layout issues in appointment page

--- a/app/assets/stylesheets/bannerSlogan.scss
+++ b/app/assets/stylesheets/bannerSlogan.scss
@@ -65,7 +65,9 @@ background:linear-gradient(to bottom,rgba(0,0,0,.05) 0,rgba(0,0,0,.7) 100%);
 	font-family: "Quicksand", sans-serif;
 	color: #ec5869;
 	text-align:center;
-	margin-top: -25px;
+	margin-top: -55px;
+	margin-bottom: 20px;
+
 }
 
 /*remove slogan when mobile*/
